deployment.yaml
# Service1
apiVersion: v1
kind: Service
metadata:
  name: cip-service1
spec:
  #type: NodePort
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: contact-management
---
# Service2
apiVersion: v1
kind: Service
metadata:
  name: cip-service2
spec:
  #type: NodePort
  ports:
    - port: 80
      targetPort: 8001
  selector:
    app: auth-service

---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
      - http:
          paths:
            - path: /api/v1/contact/?(.*)
              pathType: ImplementationSpecific 
              backend:
                service:
                  name: cip-service1
                  port:
                    number: 80
            - path: /api/v1/auth/?(.*)
              pathType: ImplementationSpecific
              backend:
                service:
                  name: cip-service2
                  port:
                    number: 80

---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: contact-management
  name: contact-management
spec:
  replicas: 2
  selector:
    matchLabels:
      app: contact-management
  template:
    metadata:
      labels:
        app: contact-management
    spec:
      containers:
        - image: deivycode/mrc-dev:contact-service-49d47f1b1eb4176be1b7a7e594e38ad05beafbe9
          imagePullPolicy: Always
          name: contacts-service
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            limits:
              cpu: "500m"
              memory: "1025Mi"
            requests:
              cpu: "500m"
              memory: "1025Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: auth-service
  name: auth-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - image: deivycode/mrc-dev:auth-service-9d73e6ab80a618f58f10bb3d022d9cfea1da52bb
          imagePullPolicy: Always
          name: auth-service
          ports:
            - containerPort: 8001
              protocol: TCP
          # livenessProbe:
          #   httpGet:
          #     path: /health_check/
          #     port: 8001
          #   initialDelaySeconds: 30
          #   periodSeconds: 10
          resources:
            limits:
              cpu: "0.5"
              memory: "1025Mi"
            requests:
              cpu: "0.5"
              memory: "1025Mi"
